Radio: add moveWorld command